src/test/deca/syntax/invalid/not_provided/espaces.deca
// Description:
//    Test de différents espaces sur le fichier.
//
// Resultats:
//    Lexeur: pas d'erreur (pas de token)
//    Parseur: ?
//
// Historique:
//    cree le 05/01/2022





